--- a/_sys/tmpl.html
+++ b/_sys/tmpl.html
@@ -9,9 +9,10 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="radar"></div>
 
     {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
-    <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
+    <script async src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
     {% } %}
   </body>
 </html>
