--- a/_sys/tmpl.html
+++ b/_sys/tmpl.html
@@ -11,8 +11,21 @@
   </head>
   <body>
     <div id="app" class="app">
-      <div class="radar">
-        <div class="radar__chart"></div>
+      <div class="radar" style="display: flex; height: 100vh">
+        <svg class="radar__chart" viewbox="0 0 800 600">
+          <g transform="translate(400, 300)">
+            <circle class="proto proto--horizon" r="300"></circle>
+            <circle class="proto proto--horizon" r="240"></circle>
+            <circle class="proto proto--horizon" r="180"></circle>
+            <circle class="proto proto--horizon" r="120"></circle>
+            <circle class="proto proto--horizon" r="60"></circle>
+            <line class="proto proto--line" x1="0" x2="400" y1="-60" y2="-60"></line>
+            <line class="proto proto--line" x1="0" x2="400" y1="-120" y2="-120"></line>
+            <line class="proto proto--line" x1="0" x2="400" y1="-180" y2="-180"></line>
+            <line class="proto proto--line" x1="0" x2="400" y1="-240" y2="-240"></line>
+            <line class="proto proto--line" x1="0" x2="400" y1="-300" y2="-300"></line>
+          </g>
+        </svg>
         <div class="radar__nav"></div>
       </div>
     </div>
