perf improvments and persistent hovering

--- a/_sys/tmpl.html
+++ b/_sys/tmpl.html
@@ -10,7 +10,7 @@
     {% } %}
   </head>
   <body>
-    <div id="app" class="app">
+    <div id="app">
       <div class="radar" style="display: flex; height: 100vh">
         <svg class="radar__chart" viewbox="0 0 800 600">
           <g transform="translate(400, 300)">
@@ -26,7 +26,7 @@
             <line class="proto proto--line" x1="0" x2="400" y1="-300" y2="-300"></line>
           </g>
         </svg>
-        <div class="radar__nav"></div>
+        <div class="radar__nav" style="flex-basis: 22.5%; background: #333;">&nbsp;</div>
       </div>
     </div>
 
