--- a/_sys/tmpl.html
+++ b/_sys/tmpl.html
@@ -26,7 +26,9 @@
             <line class="proto proto--line" x1="0" x2="400" y1="-300" y2="-300"></line>
           </g>
         </svg>
-        <div class="radar__nav" style="flex-basis: 22.5%; background: #333;">&nbsp;</div>
+        <div class="radar__nav" style="flex-basis: 22.5%; background: #333;">
+          <p></p>
+        </div>
       </div>
     </div>
 
