Improved loading and parsing routine

--- a/config/tmpl.html
+++ b/config/tmpl.html
@@ -23,10 +23,12 @@
         </div>
       </div>
     </div>
+    <% if (htmlWebpackPlugin.options.production) { %>
     <script>
       if ('serviceWorker' in navigator) {
-//        navigator.serviceWorker.register('/sw.js');
+        navigator.serviceWorker.register('/sw.js');
       }
     </script>
+    <% } %>
   </body>
 </html>
